<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sight_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_editor_absoluteX="0dp"
    app:layout_editor_absoluteY="80dp"
    tools:context=".SightItemActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="80dp">

    <ImageView
        android:id="@+id/sightImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/medium"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/favorite"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/activity_sight_item"
        app:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/activity_sight_item"
        app:layout_constraintTop_creator="1"
        app:layout_constraintTop_toTopOf="@+id/activity_sight_item"
        app:layout_constraintVertical_bias="0.0"
        app:layout_editor_absoluteX="0dp"
        app:layout_editor_absoluteY="0dp"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:src="@drawable/fazer_cafe" />

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginBottom="@dimen/medium"
        android:layout_marginEnd="@dimen/medium"
        android:layout_marginRight="@dimen/medium"
        android:background="@drawable/info_background"
        android:padding="5dp"
        android:src="@drawable/ic_favorite"
        app:layout_constraintBottom_creator="0"
        app:layout_constraintBottom_toBottomOf="@+id/activity_sight_item"
        app:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/activity_sight_item"
        app:layout_constraintTop_creator="1"
        app:layout_constraintTop_toTopOf="@+id/activity_sight_item"
        app:layout_constraintVertical_bias="0.19"
        app:layout_editor_absoluteX="359dp"
        app:layout_editor_absoluteY="104dp"
        tools:layout_constraintBottom_creator="0"
        tools:layout_constraintRight_creator="0"
        tools:layout_constraintTop_creator="0"
        tools:layout_editor_absoluteX="359dp"
        tools:layout_editor_absoluteY="104dp" />

    <TextView
        android:id="@+id/sightTitle"
        style="@style/CustomSightTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/medium"
        android:layout_marginTop="@dimen/medium"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/activity_sight_item"
        app:layout_constraintTop_creator="0"
        app:layout_constraintTop_toBottomOf="@+id/sightImage"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="140dp"
        tools:layout_constraintLeft_creator="0"
        tools:layout_constraintTop_creator="0"
        tools:text="@string/cafe_fazer" />

    <TextView
        android:id="@+id/sightAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small"
        android:layout_marginStart="@dimen/small"
        android:layout_marginTop="@dimen/small"
        android:ems="10"
        style="@style/CustomSightTextStyle"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/sightOpenHours"
        app:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/sightOpenHours"
        app:layout_constraintStart_toEndOf="@+id/labelBarrier"
        app:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/sightTitle"
        app:layout_editor_absoluteX="73dp"
        app:layout_editor_absoluteY="176dp"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="0"
        tools:text="@string/cafe_fazer_address" />

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/medium"
        android:layout_marginStart="@dimen/medium"
        android:labelFor="@+id/sightAddress"
        android:text="@string/address"
        app:layout_constraintBaseline_creator="1"
        app:layout_constraintBaseline_toBaselineOf="@+id/sightAddress"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/activity_sight_item"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="189dp"
        tools:layout_constraintBaseline_creator="0"
        tools:layout_constraintLeft_creator="0" />

    <TextView
        android:id="@+id/openHoursLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/medium"
        android:layout_marginStart="@dimen/medium"
        android:labelFor="@+id/sightOpenHours"
        android:text="@string/openHours"
        app:layout_constraintBaseline_creator="1"
        app:layout_constraintBaseline_toBaselineOf="@+id/sightOpenHours"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/activity_sight_item"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="238dp"
        tools:layout_constraintBaseline_creator="0"
        tools:layout_constraintLeft_creator="0" />

    <TextView
        android:id="@+id/sightOpenHours"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small"
        android:layout_marginLeft="@dimen/small"
        android:layout_marginTop="@dimen/small"
        android:ems="10"
        style="@style/CustomSightTextStyle"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/sightDescription"
        app:layout_constraintStart_toEndOf="@+id/labelBarrier"
        app:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/sightAddress"
        app:layout_editor_absoluteX="73dp"
        app:layout_editor_absoluteY="225dp"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="0"
        tools:text="@string/cafe_fazer_hours" />

    <TextView
        android:id="@+id/sightDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/medium"
        android:ellipsize="end"
        android:fadingEdge="vertical"
        android:padding="@dimen/medium"
        style="@style/CustomSightTextStyle"
        app:layout_constraintBottom_creator="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/activity_sight_item"
        app:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/activity_sight_item"
        app:layout_constraintTop_creator="0"
        app:layout_constraintTop_toBottomOf="@+id/sightOpenHours"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="274dp"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <android.support.constraint.Barrier
        android:id="@+id/labelBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="218dp"
        app:barrierDirection="end"
        app:constraint_referenced_ids="addressLabel,openHoursLabel"
        app:layout_constraintBottom_toTopOf="@+id/sightDescription"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="173dp"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>